--- a/style.css
+++ b/style.css
@@ -36,7 +36,8 @@ img {
   cursor: pointer;
 }
 
-.prev, .next {
+.prev,
+.next {
   background-color: transparent;
   padding: 8px 10px;
   color: #fff;
@@ -63,4 +64,7 @@ img {
     height: 300px;
     width: 90%;
   }
+}
+.niya {
+  display: none;
 }
